# duuba

./: Duuba-AI.py  LICENSE  README.md  pyproject.toml  requirements.txt
Cocoa/Tensorflow/workspace/annotations/: label_map.pbtxt
my_ssd_mobnetpod/: checkpoint  ckpt-1.index  ckpt-2.index  ckpt-3.index  pipeline.config
my_ssd_mobnetpod/eval/: events.out.tfevents.1684332060.DESKTOP-TD10CR4.10164.0.v2
my_ssd_mobnetpod/export/: pipeline.config
my_ssd_mobnetpod/export/checkpoint/: checkpoint  ckpt-0.index
my_ssd_mobnetpod/export/saved_model/variables/: variables.index
my_ssd_mobnetpod/tfjsexport/: model.json
my_ssd_mobnetpod/tfliteexport/saved_model/: fingerprint.pb
my_ssd_mobnetpod/tfliteexport/saved_model/variables/: variables.index
