[project]
name = "duuba-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "mkwanda",email = "mbrkkwanda@gmail.com"}
]
readme = "README.md"
requires-python = "==3.10.11"
dependencies = [
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "tensorflow (==2.10.1)",
    "streamlit (>=1.20)",
    "opencv-python (==4.7.0.72)",
    "opencv-python-headless (==4.8.0.76)",
    "matplotlib (==3.7.1)",
    "object-detection (>=0.0.3,<0.0.4)",
    "numpy (==1.23.5)",
    "pillow (==9.5.0)"
]

[tool.poetry]
packages = [{include = "duuba_ai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
